--- a/landing/index.html
+++ b/landing/index.html
@@ -70,15 +70,17 @@
 	</nav>
 	<!-- Header -->
 	<header>
+		<div id="header-overlay">
 		<div class="container">
 			<div class="slider-container">
 				<div class="intro-text">
-					<div class="intro-lead-in">Reflect, Encourage, Connect</div>
 					<div class="intro-heading">Drifting</div>
-					<a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
+					<div class="intro-lead-in">Reflect, Encourage, Connect</div>
+					<a href="#about" class="page-scroll btn btn-default btn-xl">Tell Me More</a>
 				</div>
 			</div>
 		</div>
+	</div>
 	</header>
 	<section id="about" class="light-bg">
 		<div class="container">
@@ -99,8 +101,8 @@
 				<div class="col-lg-12 text-center">
 					<h2>DEMOS</h2>
 					<div class="row">
-						<a href="https://c08wecancodeit.github.io/drifting-app/drifting-app/build" class="btn btn-primary">Exercise</a>
-						<a href="https://c08wecancodeit.github.io/drifting-app/ocean/" class="btn btn-primary"> Forum </a>
+						<a href="https://c08wecancodeit.github.io/drifting-app/drifting-app/build" class="btn btn-info">Exercise</a>
+						<a href="https://c08wecancodeit.github.io/drifting-app/ocean/" class="btn btn-info"> Forum </a>
 						<br />
 						<p> </p>
 					</div>
@@ -442,6 +444,7 @@
 	<footer>
 		<div class="container text-center">
 			<p>WeCanCodeIt@iSchool.uw Copyright@2019</p>
+			<p>Header Image by <a href="https://commons.wikimedia.org/wiki/File:Sailing_Boat_Horizon.JPG">Binskip Inskip</a> <a href="https://creativecommons.org/licenses/by-sa/4.0"> [CC BY-SA 4.0]</a>, via Wikimedia Commons  </p>
 		</div>
 	</footer>
 
