updated descriptions and fonts

--- a/landing/index.html
+++ b/landing/index.html
@@ -25,6 +25,7 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -53,9 +54,9 @@
 					<!--<li>
 							<a class="page-scroll" href="#services">Services</a>
 						</li>-->
-					<li>
+					<!-- 					<li>
 						<a class="page-scroll" href="#portfolio">Design</a>
-					</li>
+					</li> -->
 					<li>
 						<a class="page-scroll" href="#team">Team</a>
 					</li>
@@ -71,27 +72,32 @@
 	<!-- Header -->
 	<header>
 		<div id="header-overlay">
-		<div class="container">
-			<div class="slider-container">
-				<div class="intro-text">
-					<div class="intro-heading">Drifting</div>
-					<div class="intro-lead-in">Reflect, Encourage, Connect</div>
-					<a href="#about" class="page-scroll btn btn-default btn-xl">Tell Me More</a>
+			<div class="container">
+				<div class="slider-container">
+					<div class="intro-text">
+						<div class="intro-heading">Drifting</div>
+						<div class="intro-lead-in">Are your thoughts adrift?</div>
+						<a href="#about" class="page-scroll btn btn-default btn-xl">Tell Me More</a>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 	</header>
 	<section id="about" class="light-bg">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12 text-center">
+				<div class="col-lg-12">
 					<div class="section-title">
-						<h2>ABOUT</h2>
+						<h2 class="text-center">ABOUT</h2>
 						<div id="drifting-desc">
 							<p>
-								Bottle your emotions and release it into Drifting. Or search through bottles to see what others are experiencing. Together,
-								we'll guide your emotions and others to a healthier mental wellbeing.</p>
+								College students face a wide range of stressful situations that can be difficult to navigate alone. Our web app, Drifting,
+								provides guided exercises— for processing difficult emotions or providing encouragement— and a forum to see other’s
+								thoughts for similar situations. </p>
+
+							<p>Inspired by concept of the message in the bottle, where people can anonymously release their secrets to the sea, we
+								offer a safe place for students to confide in their troubles, to support each other, and to promote a healthier mental
+								wellbeing.</p>
 						</div>
 					</div>
 				</div>
@@ -117,8 +123,8 @@
 
 					<div class="row">
 						<ul>
-							<li>Guided mental wellbeing exercises</li>
-							<li>Bottles about other people's exeriences</li>
+							<li>Guided emotional processing exercises</li>
+							<li>Forum for viewing responses and encouragement from peers</li>
 							<li>A moderatored anonymous community</li>
 
 						</ul>
@@ -444,7 +450,8 @@
 	<footer>
 		<div class="container text-center">
 			<p>WeCanCodeIt@iSchool.uw Copyright@2019</p>
-			<p>Header Image by <a href="https://commons.wikimedia.org/wiki/File:Sailing_Boat_Horizon.JPG">Binskip Inskip</a> <a href="https://creativecommons.org/licenses/by-sa/4.0"> [CC BY-SA 4.0]</a>, via Wikimedia Commons  </p>
+			<p>Header Image by <a href="https://commons.wikimedia.org/wiki/File:Sailing_Boat_Horizon.JPG">Binskip Inskip</a> <a href="https://creativecommons.org/licenses/by-sa/4.0"> [CC BY-SA 4.0]</a>,
+				via Wikimedia Commons </p>
 		</div>
 	</footer>
 
