updated landing page colors and with logo

--- a/landing/index.html
+++ b/landing/index.html
@@ -75,8 +75,8 @@
 			<div class="container">
 				<div class="slider-container">
 					<div class="intro-text">
-						<div class="intro-heading">Drifting</div>
-						<div class="intro-lead-in">Are your thoughts adrift?</div>
+						<div class="intro-heading"><img src="images/drifting_logo.png"></div>
+						<div class="intro-lead-in"></div>
 						<a href="#about" class="page-scroll btn btn-default btn-xl">Tell Me More</a>
 					</div>
 				</div>
@@ -107,8 +107,8 @@
 				<div class="col-lg-12 text-center">
 					<h2>DEMOS</h2>
 					<div class="row">
-						<a href="https://c08wecancodeit.github.io/drifting-app/drifting-app/build" class="btn btn-info">Exercise</a>
-						<a href="https://c08wecancodeit.github.io/drifting-app/ocean/" class="btn btn-info"> Forum </a>
+						<a href="https://chiuy5.github.io/drifting/drifing/build" class="btn btn-info">Demo</a>
+<!-- 						<a href="https://c08wecancodeit.github.io/drifting-app/ocean/" class="btn btn-info"> Forum </a> -->
 						<br />
 						<p> </p>
 					</div>
