--- a/landing/index.html
+++ b/landing/index.html
@@ -107,7 +107,7 @@
 				<div class="col-lg-12 text-center">
 					<h2>DEMOS</h2>
 					<div class="row">
-						<a href="https://chiuy5.github.io/drifting/drifing/build" class="btn btn-info">Demo</a>
+						<a href="https://c08-drifting.github.io/app/" class="btn btn-info">Demo</a>
 <!-- 						<a href="https://c08wecancodeit.github.io/drifting-app/ocean/" class="btn btn-info"> Forum </a> -->
 						<br />
 						<p> </p>
